<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>waterlinked_sonar_3d15</name>
  <version>0.1.0</version>
  <description>ROS 2 driver for the Water Linked Sonar 3D-15, built on the official wlsonar Python library.</description>

  <maintainer email="julian.valdez@example.com">Julian Valdez</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/smarc-project/waterlinked_sonar_3d15</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>sensor_msgs_py</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
